<resources>
    <string name="app_name">BudgetBuddy</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Budget Buddy</string>
    <string name="nav_header_subtitle">By Team Club Penguin</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_text1">You have...</string>
    <string name="main_text2">left in discretionary spending.</string>
    <string name="add_receipt">Add New Receipt</string>
    <string name="add_earnings">Add New Earnings</string>
    <string name="cat_update">Update Budget</string>
    <string name="head_new_receipt">New Receipt</string>
    <string name="but_new_item">New Item</string>
    <string name="but_new_cat">New Category</string>
    <string name="nav_expenditures">View Expenditures</string>
    <string name="nav_history">View Transaction History</string>
    <string name="view_savings">View Savings</string>
    <string name="view_budget">Set Budgets</string>
</resources>
