<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReceipt">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="301dp"
        android:layout_height="26dp"
        android:text="Tools"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="254dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="256dp"
        android:layout_height="17dp"
        android:text="Hammer"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="296dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:text="@string/but_new_item"
        android:textSize="8sp"
        tools:layout_editor_absoluteX="325dp"
        tools:layout_editor_absoluteY="253dp" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="83dp"
        android:layout_height="37dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="$3.21"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="314dp" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="$1.23"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="289dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="256dp"
        android:layout_height="17dp"
        android:text="Screwdriver"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="322dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="$7.89"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="165dp" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="$9000.01"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="198dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="256dp"
        android:layout_height="17dp"
        android:text="Oranges"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="172dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="256dp"
        android:layout_height="17dp"
        android:text="Bacon"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/new_receipt_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head_new_receipt"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="301dp"
        android:layout_height="26dp"
        android:text="Food"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="97dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:text="@string/but_new_item"
        android:textSize="8sp"
        tools:layout_editor_absoluteX="325dp"
        tools:layout_editor_absoluteY="96dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="256dp"
        android:layout_height="17dp"
        android:text="Apples"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="139dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="$9.87"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="131dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:text="@string/but_new_cat"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="371dp" />

</android.support.constraint.ConstraintLayout>